syntax = "proto3";

package api.user.v1;

import "google/api/annotations.proto";

option go_package = "shop-kratos/api/user/v1;v1";
option java_multiple_files = true;
option java_package = "api.user.v1";

service User {
	rpc CreateUser (CreateUserRequest) returns (CreateUserReply);
	rpc UpdateUser (UpdateUserRequest) returns (UpdateUserReply);
	rpc DeleteUser (DeleteUserRequest) returns (DeleteUserReply);
	rpc GetUser (GetUserRequest) returns (GetUserReply);
	rpc ListUser (ListUserRequest) returns (ListUserReply);
	rpc RegisterUser(RegisterRequest) returns (RegisterReply) {
		option (google.api.http) = {
			post: "/api/user/v1/register",
			body: "*"
		};
	}
}

message CreateUserRequest {}
message CreateUserReply {}

message UpdateUserRequest {}
message UpdateUserReply {}

message DeleteUserRequest {}
message DeleteUserReply {}

message GetUserRequest {}
message GetUserReply {}

message ListUserRequest {}
message ListUserReply {}

message RegisterRequest {
	string username = 1;
	string password = 2;
}
message RegisterReply {
	int64 userId = 1;
}